# webclipper4snorgnote

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manifest.json  package.json
sidecar/: bridge.js  package-lock.json  package.json
src/: app.rs  deeplink.rs  helper_client.rs  lib.rs  logging.rs  main.rs  protocol.rs
src/bridge/: process.rs  protocol.rs
src/extension/: background.js  content.js  launcher.html  launcher.js  payload.js  popup.css  popup.html  popup.js  tab.js
src/helper/: server.js
src/io/: end_writer.rs  mod.rs  start_parser.rs
src/notes/: writer.rs
tests/: clipper_direct_flow_tests.rs  clipper_flow_tests.rs  deeplink_flow.rs  deeplink_new_tests.rs  deeplink_tests.rs  end_writer_tests.rs  extension.background.test.js  extension.content.test.js  extension.launcher.test.js  extension.payload.test.js  extension.popup.test.js  extension.tab.test.js  helper.server.test.js  helper_client_tests.rs  live_notebooklm.rs  mock_bridge_flow.rs  note_writer_tests.rs  parser_tests.rs  protocol_registration_tests.rs  run_once_flow.rs
tests/fixtures/: mock_bridge.js
tests/support/: mock_http.rs
